# wikipedia_pyspark

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
cleaned/clickstream/: part-00000-e7e47b53-1ff2-47fb-9381-2536a1e9f4a9-c000.snappy.parquet
src/: wikipedia.ipynb
