[tool.poetry]
name = "wikipedia-pyspark"
version = "0.1.0"
description = ""
authors = ["Tamir"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.1"
ipykernel = "^6.29.4"
pandas = "^2.2.1"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
